--- a/front/styles/index.css
+++ b/front/styles/index.css
@@ -1,7 +1,10 @@
 html,
 body,
-#__next {
-    height: 100%;
+#__next,
+.main {
+    min-height: 100%;
     width: 100%;
-    overflow: hidden;
+    margin: 0;
+    background-color: #f0f2f5;
+    display: flex;
 }
